﻿chore :  upgrade libs and specify tags when it wasn't the case

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,12 +30,12 @@ build_flags =
 	-D M5STICK_C=1
 	;-D DEBUG_MINING=1
 lib_deps = 
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-	M5StickC
-lib_ignore =
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+	m5stack/M5StickC@^0.2.5
+lib_ignore = 
 	TFT_eSPI
 	SD
 	SD_MMC
@@ -56,13 +56,13 @@ monitor_speed = 115200
 upload_speed = 921600
 board_build.partitions = huge_app.csv
 lib_deps = 
-	fbiego/ESP32Time@^2.0.0
-	bblanchon/ArduinoJson@^6.21.2
-	lvgl/lvgl@^8.3.1
-	lovyan03/LovyanGFX@^0.4.18
-	https://github.com/tzapu/WiFiManager.git
-	arduino-libraries/NTPClient
-	mathertel/OneButton @ ^2.0.3
+	fbiego/ESP32Time@^2.0.6
+	bblanchon/ArduinoJson@^6.21.5
+	lvgl/lvgl@^8.4.0
+	lovyan03/LovyanGFX@^1.1.12
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	arduino-libraries/NTPClient@^3.2.1
+	mathertel/OneButton@^2.5.0
 build_flags = 
 	-D BOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
@@ -90,13 +90,13 @@ board_build.partitions = default_8MB.csv
 board_build.mcu = esp32s3
 board_build.f_cpu = 240000000L
 lib_deps = 
-	fbiego/ESP32Time@^2.0.0
-	bblanchon/ArduinoJson@^6.21.2
-	lvgl/lvgl@^8.3.1
-	lovyan03/LovyanGFX@^0.4.18
-	https://github.com/tzapu/WiFiManager.git
-	arduino-libraries/NTPClient
-	mathertel/OneButton @ ^2.0.3
+	fbiego/ESP32Time@^2.0.6
+	bblanchon/ArduinoJson@^6.21.5
+	lvgl/lvgl@^8.4.0
+	lovyan03/LovyanGFX@^1.1.12
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	arduino-libraries/NTPClient@^3.2.1
+	mathertel/OneButton@^2.5.0
 build_flags = 
 	-D BOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
@@ -131,13 +131,13 @@ build_flags =
 	-D RGB_LED_PIN=47
 	;-D DEBUG_MINING=1
 lib_deps = 
-	https://github.com/takkaO/OpenFontRender
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-	https://github.com/FastLED/FastLED
-lib_ignore =
+	https://github.com/takkaO/OpenFontRender#v1.2
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+	fastled/FastLED@^3.6.0
+lib_ignore = 
 	TFT_eSPI
 	HANSOLOminerv2
 
@@ -160,13 +160,13 @@ build_flags =
 	-D HAN=1
 	-D M5STACK_BOARD=1
 	;-D DEBUG_MINING=1
-lib_deps =
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-	m5stack@^0.4.6
-lib_ignore =
+lib_deps = 
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+	m5stack/M5Stack@^0.4.6
+lib_ignore = 
 	TFT_eSPI
 	HANSOLOminerv2
 
@@ -191,14 +191,14 @@ build_flags =
     -D LED_PIN=15
     ;-D DEBUG_MINING=1
 lib_deps = 
-    https://github.com/takkaO/OpenFontRender
-    bblanchon/ArduinoJson@^6.21.2
-    https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-    mathertel/OneButton @ ^2.0.3
-    arduino-libraries/NTPClient
-lib_ignore =
-    TFT_eSPI
-    HANSOLOminerv2
+	https://github.com/takkaO/OpenFontRender#v1.2
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+lib_ignore = 
+	TFT_eSPI
+	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
 
@@ -222,13 +222,13 @@ build_flags =
 	-D RGB_LED_PIN=48
 	;-D DEBUG_MINING=1
 lib_deps = 
-	https://github.com/takkaO/OpenFontRender
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-	https://github.com/FastLED/FastLED
-lib_ignore =
+	https://github.com/takkaO/OpenFontRender#v1.2
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+	fastled/FastLED@^3.6.0
+lib_ignore = 
 	TFT_eSPI
 	HANSOLOminerv2
 
@@ -255,14 +255,14 @@ build_flags =
     -D ACTIVE_LED=LOW
     -D INACTIVE_LED=HIGH
 lib_deps = 
-    https://github.com/takkaO/OpenFontRender
-    bblanchon/ArduinoJson@^6.21.2
-    https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-    mathertel/OneButton @ ^2.0.3
-    arduino-libraries/NTPClient
-lib_ignore =
-    TFT_eSPI
-    HANSOLOminerv2
+	https://github.com/takkaO/OpenFontRender#v1.2
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+lib_ignore = 
+	TFT_eSPI
+	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
 
@@ -285,12 +285,12 @@ build_flags =
 	-D LED_PIN=8
 	;-D DEBUG_MINING=1
 lib_deps = 
-	https://github.com/takkaO/OpenFontRender
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-lib_ignore =
+	https://github.com/takkaO/OpenFontRender#v1.2
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+lib_ignore = 
 	TFT_eSPI
 	HANSOLOminerv2
 
@@ -315,13 +315,13 @@ build_flags =
 	-D RGB_LED_PIN=8
 	;-D DEBUG_MINING=1
 lib_deps = 
-	https://github.com/takkaO/OpenFontRender
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-	https://github.com/FastLED/FastLED
-lib_ignore =
+	https://github.com/takkaO/OpenFontRender#v1.2
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+	fastled/FastLED@^3.6.0
+lib_ignore = 
 	TFT_eSPI
 	HANSOLOminerv2
 
@@ -347,13 +347,13 @@ build_flags =
 	-D RGB_LED_PIN=48
 	;-D DEBUG_MINING=1
 lib_deps = 
-	https://github.com/takkaO/OpenFontRender
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-	https://github.com/FastLED/FastLED
-lib_ignore =
+	https://github.com/takkaO/OpenFontRender#v1.2
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+	fastled/FastLED@^3.6.0
+lib_ignore = 
 	TFT_eSPI
 	HANSOLOminerv2
 
@@ -383,13 +383,12 @@ build_flags =
 	-D NERDMINERV2=1
 	;-D DEBUG_MINING=1
 lib_deps = 
-	https://github.com/takkaO/OpenFontRender
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
-lib_ignore =
+	https://github.com/takkaO/OpenFontRender#v1.2
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+lib_ignore = 
 	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
@@ -418,13 +417,12 @@ build_flags =
 	-D LILYGO_S3_T_EMBED=1
 	;-D DEBUG_MINING=1
 lib_deps = 
-	https://github.com/takkaO/OpenFontRender
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
-lib_ignore =
+	https://github.com/takkaO/OpenFontRender#v1.2
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+lib_ignore = 
 	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
@@ -446,12 +444,12 @@ build_flags =
 	-D DEVKITV1=1
 	;-D DEBUG_MINING=1
 lib_deps = 
-	https://github.com/takkaO/OpenFontRender
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-lib_ignore =
+	https://github.com/takkaO/OpenFontRender#v1.2
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+lib_ignore = 
 	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
@@ -473,13 +471,12 @@ build_flags =
 	;-D DEBUG_MINING=1
 	-D TDISPLAY=1
 lib_deps = 
-	https://github.com/takkaO/OpenFontRender
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
-lib_ignore =
+	https://github.com/takkaO/OpenFontRender#v1.2
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+lib_ignore = 
 	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
@@ -495,13 +492,13 @@ build_flags =
     -DBOARD_HAS_PSRAM
     -DARDUINO_USB_CDC_ON_BOOT
 lib_deps = 
-	https://github.com/takkaO/OpenFontRender
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
+	https://github.com/takkaO/OpenFontRender#v1.2
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
 	https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
-lib_ignore =
+lib_ignore = 
 	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
@@ -517,13 +514,13 @@ build_flags =
     -DBOARD_HAS_PSRAM
     -DARDUINO_USB_CDC_ON_BOOT
 lib_deps = 
-	https://github.com/takkaO/OpenFontRender
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
+	https://github.com/takkaO/OpenFontRender#v1.2
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
 	https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
-lib_ignore =
+lib_ignore = 
 	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
@@ -540,14 +537,13 @@ build_flags =
     -DTFT_BACKLIGHT_ON=LOW
     -DTFT_BL=38
 lib_deps = 
-	https://github.com/takkaO/OpenFontRender
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-	https://github.com/FastLED/FastLED
-	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
-lib_ignore =
+	https://github.com/takkaO/OpenFontRender#v1.2
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+	fastled/FastLED@^3.6.0
+lib_ignore = 
 	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
@@ -563,13 +559,12 @@ build_flags =
     -DARDUINO_USB_CDC_ON_BOOT
     -DTFT_BACKLIGHT_ON=HIGH
 lib_deps = 
-	https://github.com/takkaO/OpenFontRender
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
-lib_ignore =
+	https://github.com/takkaO/OpenFontRender#v1.2
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+lib_ignore = 
 	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
@@ -593,12 +588,12 @@ build_flags =
 	;-D DEBUG_MINING
 	;-D DEBUG_MEMORY
 lib_deps = 
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-	https://github.com/takkaO/OpenFontRender
-lib_ignore =
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+	https://github.com/takkaO/OpenFontRender#v1.2
+lib_ignore = 
 	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
@@ -618,12 +613,12 @@ build_flags =
 	-D BOARD_HAS_PSRAM
 	-D NERMINER_T_QT=1
 lib_deps = 
-	https://github.com/takkaO/OpenFontRender
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-lib_ignore =
+	https://github.com/takkaO/OpenFontRender#v1.2
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+lib_ignore = 
 	HANSOLOminerv2
 
  ;--------------------------------------------------------------------
@@ -668,14 +663,14 @@ build_flags =
 	-DSPI_READ_FREQUENCY=20000000
 	-DSPI_TOUCH_FREQUENCY=2500000
 lib_deps = 
-	https://github.com/takkaO/OpenFontRender
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-	bodmer/TFT_eSPI @ ^2.5.31
+	https://github.com/takkaO/OpenFontRender#v1.2
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+	bodmer/TFT_eSPI@^2.5.43
 	https://github.com/achillhasler/TFT_eTouch
-lib_ignore =
+lib_ignore = 
 	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
@@ -715,14 +710,14 @@ build_flags =
 	-DSPI_READ_FREQUENCY=20000000
 	-DSPI_TOUCH_FREQUENCY=2500000
 lib_deps = 
-	https://github.com/takkaO/OpenFontRender
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-	bodmer/TFT_eSPI @ ^2.5.31
+	https://github.com/takkaO/OpenFontRender#v1.2
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+	bodmer/TFT_eSPI@^2.5.43
 	https://github.com/achillhasler/TFT_eTouch
-lib_ignore =
+lib_ignore = 
 	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
@@ -750,15 +745,15 @@ build_flags =
     -include $PROJECT_LIBDEPS_DIR/$PIOENV/TFT_eSPI/User_Setups/Setup207_LilyGo_T_HMI.h
 
 board_build.arduino.memory_type = qio_opi
-lib_deps =
-	https://github.com/takkaO/OpenFontRender
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-  mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-	bodmer/TFT_eSPI @ ^2.5.31
+lib_deps = 
+	https://github.com/takkaO/OpenFontRender#v1.2
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+	bodmer/TFT_eSPI@^2.5.43
 	https://github.com/achillhasler/TFT_eTouch
-lib_ignore =
+lib_ignore = 
 	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
@@ -771,15 +766,15 @@ monitor_speed = 115200
 upload_speed = 115200
 board_build.partitions = huge_app.csv
 build_flags = 
-    -D NERDMINER_T_DISPLAY_V1=1
+	-D NERDMINER_T_DISPLAY_V1=1
 	-D DEBUG_MINING=1
 lib_deps = 
-	https://github.com/takkaO/OpenFontRender
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	https://github.com/arduino-libraries/NTPClient
-lib_ignore =
+	https://github.com/takkaO/OpenFontRender#v1.2
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	https://github.com/arduino-libraries/NTPClient@^3.2.1
+lib_ignore = 
 	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
@@ -801,14 +796,15 @@ build_flags =
 	-D ESP32RGB=1
 	-D RGB_LED_PIN=21
 lib_deps = 
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-	https://github.com/FastLED/FastLED
-lib_ignore =
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+	fastled/FastLED@^3.6.0
+lib_ignore = 
 	TFT_eSPI
 	SD
 	rm67162
 	SPI
 	HANSOLOminerv2
+
