--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,11 +26,17 @@ jobs:
         run: pip install --upgrade platformio
       - name: Build PlatformIO Project
         run: pio run
-      - name: Archive artifacts
+      - name: Archive built binaries
         uses: actions/upload-artifact@v4
         with:
-          name: builded-binaries-${{ github.sha }}
+          name: built-binaries-${{ github.sha }}
           path: .pio/build/*/*.bin
+          if-no-files-found: error
+      - name: Archive bootapp binary
+        uses: actions/upload-artifact@v4
+        with:
+          name: bootapp-binary-${{ github.sha }}
+          path: ~/.platformio/packages/framework-arduinoespressif32/tools/partitions/boot_app0.bin
           if-no-files-found: error
       - name: Get version
         id: version_step
@@ -41,13 +47,18 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/dev'
     steps:
-      - name: Download binaries
+      - name: Download built binaries
         uses: actions/download-artifact@v4
         with:
           path: ${{ github.workspace }}/binaries
-          name: builded-binaries-${{ github.sha }}
-      - name: Rename binaries
-        run: find ${{ github.workspace }}/binaries -maxdepth 3 -type f -name "*.bin" -exec sh -c 'cp "$0" "${{ github.workspace }}/binaries/$(basename $(dirname "$0"))_$(basename $0)"' {} \;
+          name: built-binaries-${{ github.sha }}
+      - name: Download bootapp binary
+        uses: actions/download-artifact@v4
+        with:
+          path: ${{ github.workspace }}/binaries
+          name: bootapp-binary-${{ github.sha }}
+      - name: Rename built binaries
+        run: find ${{ github.workspace }}/binaries -mindepth 2 -maxdepth 3 -type f -name "*.bin" -exec sh -c 'cp "$0" "${{ github.workspace }}/binaries/$(basename $(dirname "$0"))_$(basename $0)"' {} \;
       - name: Pre-release
         uses: softprops/action-gh-release@v2
         with:
