--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,9 @@ jobs:
 
   prerelease:
     needs: build
+    permissions:
+      contents: write
+      discussions: write
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/dev'
     steps:
