--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ globallib_dir = lib
 default_envs = NerdminerV2-T-HMI, wt32-sc01, wt32-sc01-plus, han_m5stack, M5Stick-C, esp32cam, ESP32-2432S028R, ESP32_2432S028_2USB, NerminerV2, Lilygo-T-Embed, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-GEEK, NerminerV2-S3-AMOLED, NerminerV2-S3-AMOLED-TOUCH, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S2-mini-wemos, ESP32-S3-mini-weact, ESP32-D0WD-V3-weact, ESP32-C3-devKitmv1, ESP32-C3-super-mini
 
 [env:M5Stick-C]
-platform = espressif32
+platform = espressif32@6.6.0
 board = m5stick-c
 framework = arduino
 monitor_filters = 
@@ -45,7 +45,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:wt32-sc01]
-platform = espressif32
+platform = espressif32@6.6.0
 board = esp-wrover-kit
 framework = arduino
 monitor_filters = 
@@ -77,7 +77,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:wt32-sc01-plus]
-platform = espressif32
+platform = espressif32@6.6.0
 board = esp32-s3-devkitc-1
 framework = arduino
 monitor_filters = 
@@ -112,7 +112,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:ESP32-S3-mini-wemos]
-platform = espressif32
+platform = espressif32@6.6.0
 board = lolin_s3_mini
 framework = arduino
 monitor_filters = 
@@ -144,7 +144,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:han_m5stack]
-platform = espressif32
+platform = espressif32@6.6.0
 board = m5stack-core-esp32
 framework = arduino
 monitor_filters =
@@ -174,7 +174,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:ESP32-S2-mini-wemos]
-platform = espressif32
+platform = espressif32@6.6.0
 board = lolin_s2_mini
 framework = arduino
 monitor_filters = 
@@ -203,7 +203,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:ESP32-S3-mini-weact]
-platform = espressif32
+platform = espressif32@6.6.0
 board = lolin_s3_mini
 framework = arduino
 monitor_filters = 
@@ -238,7 +238,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:ESP32-D0WD-V3-weact]
-platform = espressif32
+platform = espressif32@6.6.0
 board = esp32dev
 framework = arduino
 monitor_filters = 
@@ -267,7 +267,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:ESP32-C3-super-mini]
-platform = espressif32
+platform = espressif32@6.6.0
 board = seeed_xiao_esp32c3
 framework = arduino
 monitor_filters = 
@@ -297,7 +297,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:ESP32-C3-devKitmv1]
-platform = espressif32
+platform = espressif32@6.6.0
 board = esp32-c3-devkitm-1
 framework = arduino
 monitor_filters = 
@@ -328,7 +328,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:ESP32-S3-devKitv1]
-platform = espressif32
+platform = espressif32@6.6.0
 board = esp32-s3-devkitc-1
 framework = arduino
 monitor_filters = 
@@ -360,7 +360,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:NerminerV2]
-platform = espressif32
+platform = espressif32@6.6.0
 board = esp32-s3-devkitc-1
 framework = arduino
 monitor_filters = 
@@ -395,7 +395,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:Lilygo-T-Embed]
-platform = espressif32
+platform = espressif32@6.6.0
 board = esp32-s3-devkitc-1
 framework = arduino
 monitor_filters = 
@@ -430,7 +430,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:ESP32-devKitv1]
-platform = espressif32
+platform = espressif32@6.6.0
 board = esp32dev
 framework = arduino
 monitor_filters = 
@@ -457,7 +457,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:TTGO-T-Display]
-platform = espressif32
+platform = espressif32@6.6.0
 board = esp32dev ;esp-wrover-kit
 framework = arduino
 monitor_filters = 
@@ -485,7 +485,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:NerminerV2-S3-AMOLED]
-platform = espressif32
+platform = espressif32@6.6.0
 board = lilygo-t-amoled
 framework = arduino
 board_build.partitions = huge_app.csv
@@ -507,7 +507,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:NerminerV2-S3-AMOLED-TOUCH]
-platform = espressif32
+platform = espressif32@6.6.0
 board = lilygo-t-amoled
 framework = arduino
 board_build.partitions = huge_app.csv
@@ -529,7 +529,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:NerminerV2-S3-DONGLE]
-platform = espressif32
+platform = espressif32@6.6.0
 board = esp32-s3-devkitc-1
 framework = arduino
 board_build.partitions = huge_app.csv
@@ -553,7 +553,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:NerminerV2-S3-GEEK]
-platform = espressif32
+platform = espressif32@6.6.0
 board = esp32-s3-devkitc-1
 framework = arduino
 board_build.partitions = huge_app.csv
@@ -575,7 +575,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:esp32cam]
-platform = espressif32 ;(ESP32-D0WD-V3)
+platform = espressif32@6.6.0 ;(ESP32-D0WD-V3)
 board = esp32cam
 framework = arduino
 monitor_filters = 
@@ -604,7 +604,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:NerminerV2-T-QT]
-platform = espressif32
+platform = espressif32@6.6.0
 board = esp32-s3-t-qt-pro
 framework = arduino
 monitor_filters = 
@@ -633,7 +633,7 @@ lib_ignore =
 ; and different gamma settings
 
 [env:ESP32_2432S028_2USB]
-platform = espressif32
+platform = espressif32@6.6.0
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
@@ -681,7 +681,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:ESP32-2432S028R]
-platform = espressif32
+platform = espressif32@6.6.0
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
@@ -728,7 +728,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:NerdminerV2-T-HMI]
-platform = espressif32
+platform = espressif32@6.6.0
 board = lilygo-t-hmi
 framework = arduino
 board_build.partitions = default_16MB.csv
@@ -764,7 +764,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:NerdminerV2-T-Display_V1]
-platform = espressif32
+platform = espressif32@6.6.0
 board = ttgo-lora32-v1
 framework = arduino
 monitor_speed = 115200
@@ -785,7 +785,7 @@ lib_ignore =
 ;--------------------------------------------------------------------
 
 [env:M5-StampS3]
-platform = espressif32
+platform = espressif32@6.6.0
 board = m5stack-stamps3
 framework = arduino
 monitor_filters = 
