--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,6 +67,8 @@ jobs:
         with:
           name: nerdminer-prerelease-${{ needs.build.outputs.version }}
           tag_name: nerdminer-prerelease-${{ needs.build.outputs.version }}
+          target_commitish: ${{ github.sha }}
+          generate_release_notes: true
           prerelease: true
           fail_on_unmatched_files: true
           files: ${{ github.workspace }}/binaries/*.bin
