--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,9 @@
-name: PlatformIO CI
+name: Nerdminer Release
 
 on:
   push:
     branches:
       - master
-      - dev
 
 jobs:
   build:
@@ -42,14 +41,24 @@ jobs:
         id: version_step
         run: echo "version=`cat src/version.h | grep CURRENT_VERSION | awk -F\\" '{print $2}'`" >> $GITHUB_OUTPUT
 
-  prerelease:
+  release:
     needs: build
     permissions:
       contents: write
       discussions: write
+      issues: write
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/dev'
+    if: github.ref == 'refs/heads/master'
     steps:
+      - uses: trstringer/manual-approval@v1
+        timeout-minutes: 120
+        with:
+          secret: ${{ github.TOKEN }}
+          approvers: BitMaker-hub
+          minimum-approvals: 1
+          issue-title: "Releasing Nerdminer version ${{ needs.build.outputs.version }}"
+          issue-body: "Please approve or deny the release of ${{ needs.build.outputs.version }}."
+          exclude-workflow-initiator-as-approver: false
       - name: Download built binaries
         uses: actions/download-artifact@v4
         with:
@@ -62,14 +71,13 @@ jobs:
           name: bootapp-binary-${{ github.sha }}
       - name: Rename built binaries
         run: find ${{ github.workspace }}/binaries -mindepth 2 -maxdepth 3 -type f -name "*.bin" -exec sh -c 'cp "$0" "${{ github.workspace }}/binaries/$(basename $(dirname "$0"))_$(basename $0)"' {} \;
-      - name: Pre-release
+      - name: Release
         uses: softprops/action-gh-release@v2
         with:
-          name: nerdminer-prerelease-${{ needs.build.outputs.version }}
-          tag_name: nerdminer-prerelease-${{ needs.build.outputs.version }}
+          name: nerdminer-release-${{ needs.build.outputs.version }}
+          tag_name: nerdminer-release-${{ needs.build.outputs.version }}
           target_commitish: ${{ github.sha }}
           generate_release_notes: true
-          prerelease: true
           fail_on_unmatched_files: true
           files: ${{ github.workspace }}/binaries/*.bin
 
