--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,6 +78,7 @@ jobs:
           tag_name: nerdminer-release-${{ needs.build.outputs.version }}
           target_commitish: ${{ github.sha }}
           generate_release_notes: true
+          make_latest: true
           fail_on_unmatched_files: true
           files: ${{ github.workspace }}/binaries/*.bin
 
