fix : nerdminer typo

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 [platformio]
 globallib_dir = lib
 
-default_envs = NerdminerV2-T-HMI, wt32-sc01, wt32-sc01-plus, han_m5stack, M5Stick-C, esp32cam, ESP32-2432S028R, ESP32_2432S028_2USB, NerminerV2, Lilygo-T-Embed, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-GEEK, NerminerV2-S3-AMOLED, NerminerV2-S3-AMOLED-TOUCH, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S2-mini-wemos, ESP32-S3-mini-weact, ESP32-D0WD-V3-weact, ESP32-C3-devKitmv1, ESP32-C3-super-mini
+default_envs = NerdminerV2-T-HMI, wt32-sc01, wt32-sc01-plus, han_m5stack, M5Stick-C, esp32cam, ESP32-2432S028R, ESP32_2432S028_2USB, NerdminerV2, Lilygo-T-Embed, ESP32-devKitv1, NerdminerV2-S3-DONGLE, NerdminerV2-S3-GEEK, NerdminerV2-S3-AMOLED, NerdminerV2-S3-AMOLED-TOUCH, NerdminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S2-mini-wemos, ESP32-S3-mini-weact, ESP32-D0WD-V3-weact, ESP32-C3-devKitmv1, ESP32-C3-super-mini
 
 [env:M5Stick-C]
 platform = espressif32@6.6.0
@@ -359,7 +359,7 @@ lib_ignore =
 
 ;--------------------------------------------------------------------
 
-[env:NerminerV2]
+[env:NerdminerV2]
 platform = espressif32@6.6.0
 board = esp32-s3-devkitc-1
 framework = arduino
@@ -484,13 +484,13 @@ lib_ignore =
 
 ;--------------------------------------------------------------------
 
-[env:NerminerV2-S3-AMOLED]
+[env:NerdminerV2-S3-AMOLED]
 platform = espressif32@6.6.0
 board = lilygo-t-amoled
 framework = arduino
 board_build.partitions = huge_app.csv
 build_flags = 
-    -DNERMINER_S3_AMOLED
+    -DNERDMINER_S3_AMOLED
     -DTOUCH=0
     -DBOARD_HAS_PSRAM
     -DARDUINO_USB_CDC_ON_BOOT
@@ -506,13 +506,13 @@ lib_ignore =
 
 ;--------------------------------------------------------------------
 
-[env:NerminerV2-S3-AMOLED-TOUCH]
+[env:NerdminerV2-S3-AMOLED-TOUCH]
 platform = espressif32@6.6.0
 board = lilygo-t-amoled
 framework = arduino
 board_build.partitions = huge_app.csv
 build_flags = 
-    -DNERMINER_S3_AMOLED
+    -DNERDMINER_S3_AMOLED
     -DTOUCH=1
     -DBOARD_HAS_PSRAM
     -DARDUINO_USB_CDC_ON_BOOT
@@ -528,13 +528,13 @@ lib_ignore =
 
 ;--------------------------------------------------------------------
 
-[env:NerminerV2-S3-DONGLE]
+[env:NerdminerV2-S3-DONGLE]
 platform = espressif32@6.6.0
 board = esp32-s3-devkitc-1
 framework = arduino
 board_build.partitions = huge_app.csv
 build_flags = 
-    -DNERMINER_S3_DONGLE
+    -DNERDMINER_S3_DONGLE
     -DBOARD_HAS_PSRAM
     -DARDUINO_USB_CDC_ON_BOOT
     -DTFT_BACKLIGHT_ON=LOW
@@ -551,13 +551,13 @@ lib_ignore =
 
 ;--------------------------------------------------------------------
 
-[env:NerminerV2-S3-GEEK]
+[env:NerdminerV2-S3-GEEK]
 platform = espressif32@6.6.0
 board = esp32-s3-devkitc-1
 framework = arduino
 board_build.partitions = huge_app.csv
 build_flags = 
-    -DNERMINER_S3_GEEK
+    -DNERDMINER_S3_GEEK
     -DBOARD_HAS_PSRAM
     -DARDUINO_USB_CDC_ON_BOOT
     -DTFT_BACKLIGHT_ON=HIGH
@@ -606,7 +606,7 @@ lib_ignore =
 
 ;--------------------------------------------------------------------
 
-[env:NerminerV2-T-QT]
+[env:NerdminerV2-T-QT]
 platform = espressif32@6.6.0
 board = esp32-s3-t-qt-pro
 framework = arduino
@@ -619,7 +619,7 @@ monitor_speed = 115200
 upload_speed = 115200
 build_flags = 
 	-D BOARD_HAS_PSRAM
-	-D NERMINER_T_QT=1
+	-D NERDMINER_T_QT=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender#v1.2
 	bblanchon/ArduinoJson@^6.21.5
