chore : update fastled and onebutton

--- a/platformio.ini
+++ b/platformio.ini
@@ -32,7 +32,7 @@ build_flags =
 lib_deps = 
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
 	m5stack/M5StickC@^0.2.5
 lib_ignore = 
@@ -62,7 +62,7 @@ lib_deps =
 	lovyan03/LovyanGFX@^1.1.12
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
 	arduino-libraries/NTPClient@^3.2.1
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 build_flags = 
 	-D BOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
@@ -96,7 +96,7 @@ lib_deps =
 	lovyan03/LovyanGFX@^1.1.12
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
 	arduino-libraries/NTPClient@^3.2.1
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 build_flags = 
 	-D BOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
@@ -134,9 +134,9 @@ lib_deps =
 	https://github.com/takkaO/OpenFontRender#v1.2
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
-	fastled/FastLED@^3.6.0
+	fastled/FastLED@3.7.8
 lib_ignore = 
 	TFT_eSPI
 	HANSOLOminerv2
@@ -163,7 +163,7 @@ build_flags =
 lib_deps = 
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
 	m5stack/M5Stack@^0.4.6
 lib_ignore = 
@@ -194,7 +194,7 @@ lib_deps =
 	https://github.com/takkaO/OpenFontRender#v1.2
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
 lib_ignore = 
 	TFT_eSPI
@@ -225,9 +225,9 @@ lib_deps =
 	https://github.com/takkaO/OpenFontRender#v1.2
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
-	fastled/FastLED@^3.6.0
+	fastled/FastLED@3.7.8
 lib_ignore = 
 	TFT_eSPI
 	HANSOLOminerv2
@@ -258,7 +258,7 @@ lib_deps =
 	https://github.com/takkaO/OpenFontRender#v1.2
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
 lib_ignore = 
 	TFT_eSPI
@@ -288,7 +288,7 @@ lib_deps =
 	https://github.com/takkaO/OpenFontRender#v1.2
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
 lib_ignore = 
 	TFT_eSPI
@@ -318,9 +318,9 @@ lib_deps =
 	https://github.com/takkaO/OpenFontRender#v1.2
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
-	fastled/FastLED@^3.6.0
+	fastled/FastLED@3.7.8
 lib_ignore = 
 	TFT_eSPI
 	HANSOLOminerv2
@@ -350,9 +350,9 @@ lib_deps =
 	https://github.com/takkaO/OpenFontRender#v1.2
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
-	fastled/FastLED@^3.6.0
+	fastled/FastLED@3.7.8
 lib_ignore = 
 	TFT_eSPI
 	HANSOLOminerv2
@@ -386,7 +386,7 @@ lib_deps =
 	https://github.com/takkaO/OpenFontRender#v1.2
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
 lib_ignore = 
 	HANSOLOminerv2
@@ -420,7 +420,7 @@ lib_deps =
 	https://github.com/takkaO/OpenFontRender#v1.2
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
 lib_ignore = 
 	HANSOLOminerv2
@@ -447,7 +447,7 @@ lib_deps =
 	https://github.com/takkaO/OpenFontRender#v1.2
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
 lib_ignore = 
 	HANSOLOminerv2
@@ -477,7 +477,7 @@ lib_deps =
 	https://github.com/takkaO/OpenFontRender#v1.2
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
 lib_ignore = 
 	HANSOLOminerv2
@@ -498,7 +498,7 @@ lib_deps =
 	https://github.com/takkaO/OpenFontRender#v1.2
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
 	https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
 lib_ignore = 
@@ -520,7 +520,7 @@ lib_deps =
 	https://github.com/takkaO/OpenFontRender#v1.2
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
 	https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
 lib_ignore = 
@@ -543,9 +543,9 @@ lib_deps =
 	https://github.com/takkaO/OpenFontRender#v1.2
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
-	fastled/FastLED@^3.6.0
+	fastled/FastLED@3.7.8
 lib_ignore = 
 	HANSOLOminerv2
 
@@ -570,7 +570,7 @@ lib_deps =
 	https://github.com/takkaO/OpenFontRender#v1.2
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
 lib_ignore = 
 	HANSOLOminerv2
@@ -598,7 +598,7 @@ build_flags =
 lib_deps = 
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
 	https://github.com/takkaO/OpenFontRender#v1.2
 lib_ignore = 
@@ -624,7 +624,7 @@ lib_deps =
 	https://github.com/takkaO/OpenFontRender#v1.2
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
 lib_ignore = 
 	HANSOLOminerv2
@@ -674,7 +674,7 @@ lib_deps =
 	https://github.com/takkaO/OpenFontRender#v1.2
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
 	bodmer/TFT_eSPI@^2.5.43
 	https://github.com/achillhasler/TFT_eTouch
@@ -727,7 +727,7 @@ lib_deps =
 	https://github.com/takkaO/OpenFontRender#v1.2
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
 	bodmer/TFT_eSPI@^2.5.43
 	https://github.com/achillhasler/TFT_eTouch
@@ -787,7 +787,7 @@ lib_deps =
 	https://github.com/takkaO/OpenFontRender#v1.2
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	https://github.com/arduino-libraries/NTPClient@^3.2.1
 lib_ignore = 
 	HANSOLOminerv2
@@ -813,9 +813,9 @@ build_flags =
 lib_deps = 
 	bblanchon/ArduinoJson@^6.21.5
 	https://github.com/tzapu/WiFiManager.git#v2.0.17
-	mathertel/OneButton@^2.5.0
+	mathertel/oneButton@^2.6.1
 	arduino-libraries/NTPClient@^3.2.1
-	fastled/FastLED@^3.6.0
+	fastled/FastLED@3.7.8
 lib_ignore = 
 	TFT_eSPI
 	SD
