--- a/platformio.ini
+++ b/platformio.ini
@@ -847,4 +847,38 @@ lib_ignore =
 	SD_MMC
 	rm67162
 	HANSOLOminerv2
-	
+
+;--------------------------------------------------------------------
+
+[env:esp32_s3_devkitc_1_SSD1306]
+platform = espressif32@6.6.0
+board = esp32-s3-devkitc-1
+framework = arduino
+monitor_filters = 
+    esp32_exception_decoder
+    time
+    log2file
+board_build.arduino.memory_type = qio_opi
+monitor_speed = 115200
+;upload_speed = 115200
+board_build.partitions = huge_app.csv
+build_flags = 
+    -D BOARD_HAS_PSRAM
+    -D ARDUINO_USB_MODE=1
+    -D ARDUINO_USB_CDC_ON_BOOT=1
+    -D ESP32_SSD1306=1
+    -D DEBUG_MINING=1
+lib_deps = 
+    https://github.com/takkaO/OpenFontRender#v1.2
+    bblanchon/ArduinoJson@^6.21.5
+    https://github.com/tzapu/WiFiManager.git#v2.0.17
+    mathertel/oneButton@^2.6.1
+    arduino-libraries/NTPClient@^3.2.1
+	https://github.com/adafruit/Adafruit_SSD1306
+    https://github.com/adafruit/Adafruit-GFX-Library
+lib_ignore =
+	TFT_eSPI
+	SD
+	SD_MMC
+	rm67162
+	HANSOLOminerv2
