M5StickC Plus 2 Support

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,37 @@ globallib_dir = lib
 
 default_envs = NerdminerV2-T-HMI, wt32-sc01, wt32-sc01-plus, han_m5stack, M5Stick-C, esp32cam, ESP32-2432S028R, ESP32_2432S028_2USB, NerdminerV2, Lilygo-T-Embed, ESP32-devKitv1, NerdminerV2-S3-DONGLE, NerdminerV2-S3-GEEK, NerdminerV2-S3-AMOLED, NerdminerV2-S3-AMOLED-TOUCH, NerdminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S2-mini-wemos, ESP32-S3-mini-weact, ESP32-D0WD-V3-weact, ESP32-C3-devKitmv1, ESP32-C3-super-mini
 
+[env:M5Stick-C-Plus2]
+platform = espressif32@6.6.0
+board = m5stick-c-plus2
+framework = arduino
+monitor_filters = 
+	esp32_exception_decoder
+	time
+	log2file
+;board_build.arduino.memory_type = qio_opi
+monitor_speed = 115200
+upload_speed = 1500000
+# 2 x 4.5MB app, 6.875MB SPIFFS
+board_build.partitions = huge_app.csv
+build_flags = 
+	-D M5STICK_C_PLUS2=1
+	;-D DEBUG_MINING=1
+lib_deps = 
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	https://github.com/takkaO/OpenFontRender#v1.2
+	mathertel/OneButton@^2.5.0
+	arduino-libraries/NTPClient@^3.2.1
+	m5stack/M5StickCPlus2
+lib_ignore = 
+	SD
+	SD_MMC
+	rm67162
+	HANSOLOminerv2
+
+;--------------------------------------------------------------------
+
 [env:M5Stick-C]
 platform = espressif32@6.6.0
 board = m5stick-c
