--- a/webflash/manifest.json
+++ b/webflash/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "M8AX - NerdMinerV2 Firmware UPDATE",
+  "name": "M8AX - NerdMinerV2 - M8AX Firmware UPDATE",
   "new_install_prompt_erase": true,
   "builds": [
     {
