--- a/webflash/manifest.json
+++ b/webflash/manifest.json
@@ -12,7 +12,7 @@
       ]
     },
     {
-      "chipFamily": "ESP32-D",
+      "chipFamily": "ESP32-D0WD-V3 (revision 3)",
       "parts": [
         { "path": "ota_data_initial.bin", "offset": 57344 },
         { "path": "firmware_esp32d.bin", "offset": 65536 },
@@ -21,7 +21,7 @@
       ]
     },
     {
-      "chipFamily": "ESP32-D0WD-V3",
+      "chipFamily": "ESP32D",
       "parts": [
         { "path": "ota_data_initial.bin", "offset": 57344 },
         { "path": "firmware_esp32d.bin", "offset": 65536 },
