--- a/platformio.ini
+++ b/platformio.ini
@@ -996,3 +996,40 @@ lib_ignore =
 	SPI
 	HANSOLOminerv2
 
+
+ ;-----------------------------------------------------------------------
+ [env:esp32-s3-devkitc1-n32r8]
+platform                   = espressif32@6.6.0
+board                      = esp32-s3-devkitc1-n32r8
+framework                  = arduino
+
+extra_scripts              = pre:auto_firmware_version.py
+
+monitor_speed              = 115200
+upload_speed               = 115200
+monitor_filters            = esp32_exception_decoder, time, log2file
+
+; ---- Partitions ----
+board_build.partitions     = huge_app.csv
+board_build.filesystem     = LittleFS
+
+; ---- Build Flags ----
+build_flags = 
+    -D BOARD_HAS_PSRAM
+    -D ARDUINO_USB_MODE=1          ; ← nur lassen, wenn Dein USB-Port direkt am ESP32-S3 hängt
+    -D ARDUINO_USB_CDC_ON_BOOT=1   ;   sonst beide Flags löschen
+    -D ESP32RGB=1
+    -D RGB_LED_PIN=38 
+    -D RGB_LED_ORDER=BRG
+    ;-D DEBUG_MINING=1
+
+; ---- Libraries ----
+lib_deps = 
+    https://github.com/takkaO/OpenFontRender#v1.2
+    bblanchon/ArduinoJson@^6.21.5
+    https://github.com/tzapu/WiFiManager.git#v2.0.17
+    mathertel/oneButton@^2.6.1
+    arduino-libraries/NTPClient@^3.2.1
+    fastled/FastLED@3.7.8
+
+lib_ignore = TFT_eSPI, HANSOLOminerv2
