--- a/platformio.ini
+++ b/platformio.ini
@@ -1016,8 +1016,8 @@ board_build.filesystem     = LittleFS
 ; ---- Build Flags ----
 build_flags = 
     -D BOARD_HAS_PSRAM
-    -D ARDUINO_USB_MODE=1          ; ← nur lassen, wenn Dein USB-Port direkt am ESP32-S3 hängt
-    -D ARDUINO_USB_CDC_ON_BOOT=1   ;   sonst beide Flags löschen
+    -D ARDUINO_USB_MODE=1        
+    -D ARDUINO_USB_CDC_ON_BOOT=1   
     -D ESP32RGB=1
     -D RGB_LED_PIN=38 
     -D RGB_LED_ORDER=BRG
