--- a/platformio.ini
+++ b/platformio.ini
@@ -11,12 +11,15 @@
 [platformio]
 globallib_dir = lib
 
-default_envs = NerdminerV2, NerdminerV2-T-HMI, wt32-sc01, wt32-sc01-plus, han_m5stack, M5Stick-C, esp32cam, ESP32-2432S028R, ESP32_2432S028_2USB, Lilygo-T-Embed, ESP32-devKitv1, NerdminerV2-S3-DONGLE, NerdminerV2-S3-GEEK, NerdminerV2-S3-AMOLED, NerdminerV2-S3-AMOLED-TOUCH, NerdminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S2-mini-wemos, ESP32-S3-mini-weact, ESP32-D0WD-V3-weact, ESP32-C3-devKitmv1, ESP32-C3-super-mini
+default_envs = NerdminerV2 ; NerdminerV2-T-HMI, wt32-sc01, wt32-sc01-plus, han_m5stack, M5Stick-C, esp32cam, ESP32-2432S028R, ESP32_2432S028_2USB, Lilygo-T-Embed, ESP32-devKitv1, NerdminerV2-S3-DONGLE, NerdminerV2-S3-GEEK, NerdminerV2-S3-AMOLED, NerdminerV2-S3-AMOLED-TOUCH, NerdminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S2-mini-wemos, ESP32-S3-mini-weact, ESP32-D0WD-V3-weact, ESP32-C3-super-mini
 
 [env:M5Stick-C-Plus2]
 platform = espressif32@6.6.0
 board = m5stick-c-plus2
 framework = arduino
+extra_scripts =
+    pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_filters = 
 	esp32_exception_decoder
 	time
@@ -50,6 +53,7 @@ board = m5stick-c
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_filters = 
 	esp32_exception_decoder
 	time
@@ -81,6 +85,9 @@ lib_ignore =
 platform = espressif32@6.6.0
 board = m5stick-c
 framework = arduino
+extra_scripts =
+    pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_filters = 
 	esp32_exception_decoder
 	time
@@ -115,6 +122,7 @@ board = esp-wrover-kit
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_filters = 
 	esp32_exception_decoder
 	time
@@ -149,6 +157,7 @@ board = esp32-s3-devkitc-1
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_filters = 
 	esp32_exception_decoder
 	time
@@ -186,6 +195,7 @@ board = lolin_s3_mini
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_filters = 
 	esp32_exception_decoder
 	time
@@ -220,6 +230,7 @@ board = m5stack-core-esp32
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_filters =
 	esp32_exception_decoder
 	time
@@ -252,6 +263,7 @@ board = lolin_s2_mini
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_filters = 
     esp32_exception_decoder
     time
@@ -283,6 +295,7 @@ board = lolin_s3_mini
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_filters = 
 	esp32_exception_decoder
 	time
@@ -320,6 +333,7 @@ board = esp32dev
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_filters = 
     esp32_exception_decoder
     time
@@ -351,6 +365,7 @@ board = seeed_xiao_esp32c3
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_filters = 
 	esp32_exception_decoder
 	time
@@ -383,6 +398,7 @@ board = esp32-c3-devkitm-1
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_filters = 
 	esp32_exception_decoder
 	time
@@ -414,6 +430,9 @@ lib_ignore =
 platform = espressif32@6.6.0
 board = esp32-c3-devkitm-1
 framework = arduino
+extra_scripts =
+    pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_filters = 
 	esp32_exception_decoder
 	time
@@ -443,6 +462,9 @@ lib_ignore =
 platform = espressif32@6.6.0
 board = esp32-s3-0.42oled
 framework = arduino
+extra_scripts =
+    pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_filters = 
 	esp32_exception_decoder
 	time
@@ -474,6 +496,7 @@ board = esp32-s3-devkitc-1
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_filters = 
 	esp32_exception_decoder
 	time
@@ -508,6 +531,8 @@ board = esp32-s3-devkitc-1
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
+	post:post_build_merge.py 
 monitor_filters = 
 	esp32_exception_decoder
 	time
@@ -544,6 +569,7 @@ board = esp32-s3-devkitc-1
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_filters = 
 	esp32_exception_decoder
 	time
@@ -580,6 +606,7 @@ board = esp32dev
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_filters = 
 	esp32_exception_decoder
 	time
@@ -609,6 +636,7 @@ board = esp32dev ;esp-wrover-kit
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_filters = 
 	esp32_exception_decoder
 	time
@@ -641,6 +669,7 @@ board = lilygo-t-amoled
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 board_build.partitions = huge_app.csv
 build_flags = 
     -DNERDMINER_S3_AMOLED
@@ -665,6 +694,7 @@ board = lilygo-t-amoled
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 board_build.partitions = huge_app.csv
 build_flags = 
     -DNERDMINER_S3_AMOLED
@@ -689,6 +719,7 @@ board = esp32-s3-devkitc-1
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 board_build.partitions = huge_app.csv
 build_flags = 
     -DNERDMINER_S3_DONGLE
@@ -714,6 +745,7 @@ board = esp32-s3-devkitc-1
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 board_build.partitions = huge_app.csv
 build_flags = 
     -DNERDMINER_S3_GEEK
@@ -742,6 +774,7 @@ board = esp32cam
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_filters = 
 	esp32_exception_decoder
 	time
@@ -773,6 +806,7 @@ board = esp32-s3-t-qt-pro
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_filters = 
 	esp32_exception_decoder
 	time
@@ -804,6 +838,7 @@ board = esp32dev
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_speed = 115200
 upload_speed = 921600
 ;build_type = debug
@@ -854,6 +889,7 @@ board = esp32dev
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_speed = 115200
 monitor_filters = 
 	esp32_exception_decoder
@@ -909,6 +945,7 @@ board = lilygo-t-hmi
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 board_build.partitions = default_16MB.csv
 monitor_filters =
 	esp32_exception_decoder
@@ -948,6 +985,7 @@ board = ttgo-lora32-v1
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_speed = 115200
 upload_speed = 115200
 board_build.partitions = huge_app.csv
@@ -971,6 +1009,7 @@ board = m5stack-stamps3
 framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
+    post:post_build_merge.py
 monitor_filters = 
 	esp32_exception_decoder
 	time
